--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "nuwave/lighthouse": "^5.24",
         "spatie/laravel-permission": "^5.1"
     },
     "require-dev": {
