--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "infyomlabs/laravel-ui-adminlte": "^3.2",
         "laravel/framework": "^8.54",
+        "laravel/passport": "^10.3",
         "laravel/sanctum": "^2.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
