--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
         "guzzlehttp/guzzle": "^7.2",
         "jenssegers/agent": "^2.6",
         "laravel/breeze": "^1.8",
+        "laravel/cashier-paddle": "^1.5",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "stevebauman/location": "^6.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
